Trying to fix image not loading on theme change on mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -19,7 +19,6 @@ body {
   background-color: hsl(235, 21%, 11%);
   min-height: 100vh;
   z-index: 1;
-  transition: all .3s;
 }
 
 .rest-of-content::before {
@@ -27,22 +26,21 @@ body {
   content: "";
   top: 0;
   left: 0;
-  background: url("../images/bg-desktop-dark.jpg");
+  background-image: url("../images/bg-desktop-dark.jpg");
   width: 100%;
   height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
-  transition: all .3s;
 }
 
-.rest-of-content.light-theme  {
+.light-theme.rest-of-content  {
   background-color: hsl(0, 0%, 98%);
 }
 
-.rest-of-content.light-theme::before {
-  background: url("../images/bg-desktop-light.jpg");
+.light-theme.rest-of-content::before {
+  background-image: url("../images/bg-desktop-light.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
